white space issue resolved

--- a/src/app/components/install-play-game-v2/install-play-game-v2.component.scss
+++ b/src/app/components/install-play-game-v2/install-play-game-v2.component.scss
@@ -103,6 +103,7 @@ video {
     -webkit-box-orient: vertical;
     text-wrap: wrap;
     padding: 0px 5px;
+    white-space: normal;
   }
 
   .gameTags {
