--- a/src/app/components/lanscape-video/lanscape-video.component.scss
+++ b/src/app/components/lanscape-video/lanscape-video.component.scss
@@ -10,6 +10,7 @@
   font-size: 16px;
   margin-top: 9px;
   text-wrap: balance;
+  white-space: normal;
 }
 
 .card-img {
