--- a/src/app/components/portrait-game-card/portrait-game-card.component.scss
+++ b/src/app/components/portrait-game-card/portrait-game-card.component.scss
@@ -78,6 +78,7 @@ video {
     overflow: hidden;
     font-size: 16px;
     margin-top: 9px;
+    white-space: normal;
   }
 
   .gameTags {
