--- a/src/app/components/special-banner-card/special-banner-card.component.scss
+++ b/src/app/components/special-banner-card/special-banner-card.component.scss
@@ -64,6 +64,7 @@ video {
     font-size: 16px;
     margin-top: 9px;
     padding: 0px 5px;
+    white-space: normal;
   }
 
   .gameTags {
